# Waisting

./: .gitignore  App.7z  CHANGES.md  CMakeLists.txt  CMakeLists.txt.user.691ffb6  CMakeUserPresets.json  Conan_Commands.md  README.md  buildDebug.bat  buildRelease.bat
App/: CMakeLists.txt  DataHandlerTool.qml  Main.qml  MainFrameless.qml  OpenFileObject.cpp  OpenFileObject.h  QImage2QMLProvider.cpp  QImage2QMLProvider.h  main.cpp
App/components/: Ribbon.qml  RibbonButton.qml  RibbonPanel.qml  RibbonTab.qml  RibbonTabButton.qml  WTMessageDialog.qml  show.frag  show.frag.qsb
App/views/: ImageTilingDialog.cpp  ImageTilingDialog.h  ImageTilingDialog.qml
GLTFSDK/: CMakeLists.txt  GenerateSchemaJsonHeader.ps1
Test/: CMakeLists.txt  main.cpp
WTComponents/: CMakeLists.txt  WButton.qml  WImageLabelButton.qml  WSpliter.qml
WTDataManipulate/: CMakeLists.txt  CoordinateSystemManager.cpp  CoordinateSystemManager.h  DelaunayTriangle.cpp  DelaunayTriangle.h  IDataM.cpp  IDataM.h  QuadEdge.cpp  QuadEdge.h  SlippyTiler.cpp  SlippyTiler.h  TriangleUlit.cpp  TriangleUlit.h
WTEarth/: CMakeLists.txt  Cartographic.cpp  Cartographic.h  Ellipsoid.cpp  Ellipsoid.h  GeographicProjection.cpp  GeographicProjection.h  GeographicTilingScheme.cpp  GeographicTilingScheme.h  Projection.h  Rectangle.cpp  Rectangle.h  TilingSchema.h  WebMercatorProjection.cpp  WebMercatorProjection.h  WebMercatorTilingSheme.cpp  WebMercatorTilingSheme.h
WTFrame/: CMakeLists.txt  CMakeLists.txt.autosave  EntityPool.h  FileBatchOutput.cpp  FileBatchOutput.h  FileBufferManager.cpp  FileBufferManager.h  FilesystemAdapter.cpp  FilesystemAdapter.h  IOAdapter.cpp  IOAdapter.h  IProgressInfo.h  ImageFileIOAdapter.cpp  ImageFileIOAdapter.h  ImageFileParallelIOAdapter.h  ImageFileParallelOAdapter.cpp  Logger.cpp  Logger.h  MemoryPool.cpp  MemoryPool.h  TerrainFileParalleIOAdapter.cpp  TerrainFileParalleIOAdapter.h  WTDefines.h  wtCancelation.cpp  wtCancelation.h  wtFrameDefines.h  wtLog.cpp  wtLog.h
WTOSG/: CMakeLists.txt  CMakeLists.txt.autosave  CommonDefines.qml  DSMGroupLayer.cpp  DSMGroupLayer.h  GeodeticRelativeCoordinates.cpp  GeodeticRelativeCoordinates.h  NodeHandleVisitor.cpp  NodeHandleVisitor.h  OperationTools.h  ProgressInfo.h  SceneManager.cpp  SceneManager.h  WLayerModel.cpp  WLayerModel.h  WLayerTree.qml  WLayerTreeMenu.qml  WLayerTreeModel.cpp  WLayerTreeModel.h  WOSG.qml  WTDefines.h  WTLayer.cpp  WTLayer.h  WTLayerNode.h  WTOSGDefines.h  WTOSGRenderer.cpp  WTOSGRenderer.h  WTOSGViewer.cpp  WTOSGViewer.h  WTSceneManager.h
WTRender/: CMakeLists.txt
WTTools/: CMakeLists.txt  settings.h
WTTools/NanoID/: crypto_random.h  nanoid.cpp  nanoid.h
WTTranscoder/: Asset3DToGLTF.h  CMakeLists.txt  IWTOutputStreamFactory.h  TranscodeOptions.h  WTAsset3DToGLTF.cpp  WTAsset3DToGLTF.h  WTExporterGLTF.cpp  WTExporterGLTF.h  WTTranscodeOptions.cpp  WTTranscodeOptions.h  WTTranscoderDefines.h  wtAssectConvertor.cpp  wtAssectConvertor.h  wtExtensionsInWT.cpp  wtExtensionsInWT.h  wtGLTFExportOptions.cpp  wtGLTFExportOptions.h  wtGLTFTranscodeOptions.cpp  wtGLTFTranscodeOptions.h  wtMaterialConverter.cpp  wtMaterialConverter.h
WTUlits/: CMakeLists.txt  wtFileIO.cpp  wtFileIO.h  wtLexicalCast.h  wtSmartThrow.cpp  wtSmartThrow.h  wtStreamUtils.h  wtStringUtils.cpp  wtStringUtils.h  wtUlitsDefines.h
WTUlits/NanoID/: crypto_random.h  nanoid.h
cmake/: FindOsgEarth.cmake  atom.cmake
